Fix overflowing text entries

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -79,6 +79,9 @@
         @include button(active-header);
       }
     }
+    .search {
+      border: 1px solid $borders_color;
+    }
 
   }
 }
