--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -2350,7 +2350,7 @@ headerbar {
     box-shadow: none;
     background: transparent;
     border: none;
-    min-height: 14px;
+    min-height: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     padding-top: 4px;
@@ -5674,6 +5674,9 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
   box-shadow: none;
   border: none;
   color: black; }
+
+.nautilus-window .titlebar .search {
+  border: 1px solid #252134; }
 
 .nautilus-circular-button {
   border-radius: 20px;
